# TritonKernels

./: pyproject.toml  verify.py
example/: verify.py
gemm/: __init__.py  gemm.py
tk/: __init__.py
tk/gemm/: gemm.py
tk/quantization/: __init__.py  per_token_quant_dynamic_sym_int8.py  quant_triton_utils.py  quant_utils.py
tk/utils/: __init__.py  check_utils.py  kernel_registry.py  utils.py
tk/utils/evaluators/: GemmVerifier.py
utils/: __init__.py  kernel_registry.py  utils.py
